src/objects/AB2__AdBookLimitedSyncSettings__mdt.object
<CustomObject>
    <description>Controls how fields will be synced during a limited operation. All other values will remain unchanged in AdBook/Salesforce.</description>
    <fields>
        <fullName>AB2__AgencyCommission__c</fullName>
        <description>Should the AdBook Order AgencyCommission be synchronised? 
Corresponds to the Opportunity.ABAgencyCommission__c or AdBookSettings.agencyCommissionDefault</description>
        <inlineHelpText>Should the AdBook Order AgencyCommission be synchronised? 
Corresponds to the Opportunity.ABAgencyCommission__c or AdBookSettings.agencyCommissionDefault</inlineHelpText>
        <label>Agency Commission</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex Sync</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                    <label>Sync to AdBook Only</label>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__AgencyContactID__c</fullName>
        <description>Sync only AdBook Id if defined. If there is no ID the Contact will also be created. 
Should the AdBook Order AgencyContactID be syncronised? Corresponds to the Opportunity.ABAgencyContact__c field.</description>
        <inlineHelpText>Sync only AdBook Id if defined. If there is no ID the Contact will also be created. 
Should the AdBook Order AgencyContactID be syncronised? Corresponds to the Opportunity.ABAgencyContact__c field.</inlineHelpText>
        <label>Agency Contact</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__AgencyID__c</fullName>
        <description>Should the AdBook Order AgencyID be synchronised? Corresponds to the Opportunity.AB_Agency__c field.</description>
        <inlineHelpText>Should the AdBook Order AgencyID be synchronised? Corresponds to the Opportunity.AB_Agency__c field.</inlineHelpText>
        <label>AgencyID</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__AttachmentsInLimitedSync__c</fullName>
        <description>Should attachments be included in a limited sync?</description>
        <inlineHelpText>Should attachments be included in a limited sync?</inlineHelpText>
        <label>Attachments In Limited Sync</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__BillTo__c</fullName>
        <description>Should the AdBook Order BillTo be synchronised? Corresponds to the Opportunity.ABBillTo__c field.</description>
        <inlineHelpText>Should the AdBook Order BillTo be synchronised? Corresponds to the Opportunity.ABBillTo__c field.</inlineHelpText>
        <label>BillTo</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__BillTypeName__c</fullName>
        <description>Should the AdBook Order BillTypeName be synchronised? Corresponds to the Opportunity.ABBillType__c field.</description>
        <inlineHelpText>Should the AdBook Order BillTypeName be synchronised? Corresponds to the Opportunity.ABBillType__c field.</inlineHelpText>
        <label>BillTypeName</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__BillingComments__c</fullName>
        <description>Should the AdBook Order BillingComments be synchronised? Corresponds to the Opportunity.AB_Billing_Comments__c field.</description>
        <inlineHelpText>Should the AdBook Order BillingComments be synchronised? Corresponds to the Opportunity.AB_Billing_Comments__c field.</inlineHelpText>
        <label>BillingComments</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__BillingContactID__c</fullName>
        <description>Should the AdBook Order BillingContactID be synchronized? Corresponds to the Opportunity.ABBillingContact__c field.</description>
        <inlineHelpText>Should the AdBook Order BillingContactID be synchronized? Corresponds to the Opportunity.ABBillingContact__c field.</inlineHelpText>
        <label>BillingContactID</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__BillingModel__c</fullName>
        <description>Should the AdBook Order BillingModelID be synchronized? Corresponds to the Opportunity.ABBillingModel__c field.</description>
        <inlineHelpText>Should the AdBook Order BillingModelID be synchronized? Corresponds to the Opportunity.ABBillingModel__c field.</inlineHelpText>
        <label>BillingModel</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ClientContactID__c</fullName>
        <description>Should the AdBook Order ClientContactID be synchronised? Corresponds to the Opportunity.ABClientContact__c field.</description>
        <inlineHelpText>Should the AdBook Order ClientContactID be synchronised? Corresponds to the Opportunity.ABClientContact__c field.</inlineHelpText>
        <label>ClientContactID</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ClientID__c</fullName>
        <description>Should the AdBook Order ClientID be synchronised? Corresponds to the Opportunity.AccountID field unless using the AdBookSettings.opportunityClientAccountFieldLookupName.</description>
        <inlineHelpText>Should the AdBook Order ClientID be synchronised? Corresponds to the Opportunity.AccountID field unless using the AdBookSettings.opportunityClientAccountFieldLookupName.</inlineHelpText>
        <label>ClientID</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ConfiguredContactGroupRepsMerge__c</fullName>
        <description>When performing a limited sync of Configured Contact Group Reps, should any Rep in AdBook with a Rep Type not covered in Salesforce be merged back in? This will prevent Salesforce from deleting Reps it doesn&apos;t know about. It also removes the ability for Salesforce to delete a Rep that is no longer needed on the order.</description>
        <inlineHelpText>When performing a limited sync of Configured Contact Group Reps, should any Rep in AdBook with a Rep Type not covered in Salesforce be merged back in? This will prevent Salesforce from deleting Reps it doesn&apos;t know about.</inlineHelpText>
        <label>Configured Contact Group Reps Merge</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ConfiguredContactGroupReps__c</fullName>
        <description>Should Configured Contact Group Reps be included in a limited sync?</description>
        <inlineHelpText>Should Configured Contact Group Reps be included in a limited sync?</inlineHelpText>
        <label>Configured Contact Group Reps</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__CurrencyID__c</fullName>
        <description>Should the Opportunity CurrencyIsoCode or users default currency be mapped to the AdBook CurrencyId?</description>
        <inlineHelpText>Should the Opportunity CurrencyIsoCode or users default currency be mapped to the AdBook CurrencyId?</inlineHelpText>
        <label>CurrencyID</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__Drops__c</fullName>
        <description>Are Drops included in the limited Sync Operation?</description>
        <inlineHelpText>Are Drops included in the limited Sync Operation?</inlineHelpText>
        <label>Drops</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__IONumber__c</fullName>
        <description>Should the AdBook Order IONumber be synchronised? Corresponds to the Opportunity.AB_IO_Number__c field.</description>
        <inlineHelpText>Should the AdBook Order IONumber be synchronised? Corresponds to the Opportunity.AB_IO_Number__c field.</inlineHelpText>
        <label>IONumber</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__InternalOrderNotes__c</fullName>
        <description>Should the AdBook Order InternalOrderNotes be synchronised? Corresponds to the Opportunity.AB_Internal_Campaign_Notes__c field.</description>
        <inlineHelpText>Should the AdBook Order InternalOrderNotes be synchronised? Corresponds to the Opportunity.AB_Internal_Campaign_Notes__c field.</inlineHelpText>
        <label>InternalOrderNotes</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__MaterialsContactID__c</fullName>
        <description>Should the AdBook Order MaterialsContactID be synchronised? Corresponds to the Opportunity.ABMaterialsContact__c field.</description>
        <inlineHelpText>Should the AdBook Order MaterialsContactID be synchronised? Corresponds to the Opportunity.ABMaterialsContact__c field.</inlineHelpText>
        <label>MaterialsContactID</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__OperationsRep__c</fullName>
        <description>Sync the Operations Rep in the OrderRep collection.</description>
        <inlineHelpText>Sync the Operations Rep in the OrderRep collection.</inlineHelpText>
        <label>Operations Rep</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__OrderConfigurationID__c</fullName>
        <description>Should the AdBook Order OrderConfigurationID be synchronised? Corresponds to the first matching FieldValueMap of type OrderConfiguration.</description>
        <inlineHelpText>Should the AdBook Order OrderConfigurationID be synchronised? Corresponds to the first matching FieldValueMap of type OrderConfiguration.</inlineHelpText>
        <label>OrderConfigurationID</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__OrderName__c</fullName>
        <description>Should the AdBook Order OrderName be synchronised? Corresponds to the Opportunity.Name field.</description>
        <inlineHelpText>Should the AdBook Order OrderName be synchronised? Corresponds to the Opportunity.Name field.</inlineHelpText>
        <label>OrderName</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__OrderNotes__c</fullName>
        <description>Should the AdBook Order OrderNotes be synchronised? Corresponds to the Opportunity.AB_Campaign_Notes__c field.</description>
        <inlineHelpText>Should the AdBook Order OrderNotes be synchronised? Corresponds to the Opportunity.AB_Campaign_Notes__c field.</inlineHelpText>
        <label>Order Notes</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__OrderStatusID__c</fullName>
        <description>Should the AdBook Order OrderStatusID be synchronised? Corresponds to the Opportunity.ABOrderStatus__c field if defined. Otherwise the mapped StageName.</description>
        <inlineHelpText>Should the AdBook Order OrderStatusID be synchronised? Corresponds to the Opportunity.ABOrderStatus__c field if defined. Otherwise the mapped StageName.</inlineHelpText>
        <label>OrderStatusID</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__Order__c</fullName>
        <description>Is the Order part of the limited synced?</description>
        <inlineHelpText>Is the Order part of the limited synced?</inlineHelpText>
        <label>Order</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__PONumber__c</fullName>
        <description>Should the AdBook Order PONumber be synchronised? Corresponds to the Opportunity.AB_PO_Number__c field.</description>
        <inlineHelpText>Should the AdBook Order PONumber be synchronised? Corresponds to the Opportunity.AB_PO_Number__c field.</inlineHelpText>
        <label>PONumber</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__RateCardNameID__c</fullName>
        <description>Should the AdBook Order RateCardNameId be synchronised? If defined it will get the value from the Opportunity.ABRateCard__c field. Otherwise it will use the PriceBook to RateCard mapping.</description>
        <inlineHelpText>Should the AdBook Order RateCardNameId be synchronised? If defined it will get the value from the Opportunity.ABRateCard__c field. Otherwise it will use the PriceBook to RateCard mapping.</inlineHelpText>
        <label>RateCardNameID</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__SalesReps__c</fullName>
        <description>Should Sales Reps be included in the limited sync?</description>
        <inlineHelpText>Should Sales Reps be included in the limited sync?</inlineHelpText>
        <label>SalesReps</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ThirdPartyAdServerID__c</fullName>
        <label>ThirdPartyAdServerID</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplex</fullName>
                    <default>true</default>
                    <label>Duplex</label>
                </value>
                <value>
                    <fullName>ToAdBook</fullName>
                </value>
                <value>
                    <fullName>ToSalesforce</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AdBook Limited Sync Settings</label>
    <pluralLabel>AdBook Limited Sync Settings</pluralLabel>
</CustomObject>